# admin

./: .gitignore  README.md  config.yaml
benchmarks/: Cargo.toml  build.sh
benchmarks/src/: cli.rs  client.rs  lib.rs  metrics.rs  reporter.rs  runner.rs
resources/: apps.rs  benchmarks.rs  bestresults.rs  files.rs  keys.rs  repos.rs  schemas.rs
schemas/: schema.graphql
source/src/: api.ts  index.css  routeTree.gen.ts  router.tsx
source/src/components/: DatabaseNav.tsx
source/src/components/auth/: DashboardPage.tsx  OAuthPage.tsx  RolesPage.tsx  UsersPage.tsx  api.ts
source/src/components/benchmarks/: BenchmarksPanel.tsx
source/src/components/telemetry/: LogsPanel.tsx  MetricsPanel.tsx  SpansPanel.tsx
source/src/routes/: __root.tsx
source/src/routes/applications/: index.tsx
source/src/routes/applications/$appId/: config.tsx  index.tsx  route.tsx
source/src/routes/applications/$appId/data/: $database.$table.tsx
source/src/routes/auth/: index.tsx  oauth.tsx  roles.tsx  users.tsx
source/src/routes/telemetry/: index.tsx
source/src/routes/vectors/: index.tsx
